# taro-core

./: .gitignore  CONFIG.md  CONTRIBUTING.md  LICENSE  README.md  print_time.sh  pyproject.toml  setup.py
docs/: CONFIG.md  DEV.md  architecture.md  cli.md  dev-notes.md
taro/: __init__.py  api.py  app.py  argsconfig.py  cfg.py  cfgfile.py  cli.py  client.py  cnf.py  configuration.py  dto.py  err.py  execution.py  hostinfo.py  http.py  jfilter.py  job.py  listening.py  log.py  managed.py  paths.py  persistence.py  plugin.py  plugins.py  process.py  program.py  ps.py  rdbms.py  runner.py  server.py  socket.py  term.py  theme.py  util.py  utilns.py  warning.py
taroapp/: __init__.py  __main__.py  app.py  argsconfig.py  argsutil.py  cli.py  cliutil.py  jfilter.py  logutil.py  printer.py  ps.py  style.py  version.py  warnspec.py
taros/: __init__.py  __main__.py  app.py  argsconfig.py  cfg.py  cfgfile.py  cli.py  httputil.py  paths.py
test/: __init__.py  conftest.py  dodgy_plugin.py  job_instance_id_test.py  taro_test_util.py  test_api.py  test_app_config.py  test_app_disabling.py  test_app_exec.py  test_app_exec_config.py  test_app_exec_disabling.py  test_app_exec_logging.py  test_app_exec_output.py  test_app_exec_plugin.py  test_app_job_disabling.py  test_app_ps.py  test_app_stop.py  test_app_sync.py  test_cfgfile.py  test_client.py  test_cnf.py  test_config_app.py  test_criteria.py  test_criterion_id.py  test_events.py  test_exec_app.py  test_featurize.py  test_inst.py  test_inst_criteria.py  test_job_instance_id.py  test_output.py  (+28 more)
test-plugin-invalid/: __init__.py
(+168 files in other folders)
